# kijko_frontend

./: .gitignore  App.tsx  Dockerfile  README.md  deploy.sh  docker-compose.yml  index.html  index.tsx  nginx.conf  package-lock.json  package.json  types.ts  vite.config.ts
.claude/: settings.local.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md
components/: ContextStore.tsx  CookieConsent.tsx  ErrorBoundary.tsx  Footer.tsx  SettingsModal.tsx  Sidebar.tsx
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
lib/: 2fa.ts  (+5 more)
server/: .env.example  Dockerfile  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  dependencies.py  main.py
server/app/middleware/: __init__.py  auth.py  observability.py  quota.py  rate_limit.py
server/app/models/: __init__.py  base.py  billing.py  enums.py  execution.py  habit.py  project.py  reflex.py  skill.py  user.py
server/app/routers/: admin.py  auth.py  billing.py  executions.py  gdpr.py  habits.py  projects.py  reflexes.py  skills.py  webhooks.py  ws.py
server/app/services/: database.py  gdpr.py  health.py  log_retention.py  projects.py  stripe_service.py  supabase_auth.py  usage.py  websocket.py
server/tests/: __init__.py  conftest.py  test_advanced_validation.py  test_billing.py  test_domain_services.py  test_e2e_journey.py  test_infrastructure.py  test_keycloak.py  test_realtime.py  test_rls.py  test_routers.py  test_security.py  test_services.py  test_stripe_service.py  test_webhooks_config.py  test_websocket.py
(+373 files in other folders)
